# rpot

./: Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
src/: conventions.rs  conversions.rs  convertions.rs  de_serialize.rs  events.rs  generator.rs  main.rs  model.rs  tests.rs  webhook.rs  webhook_model.rs
src/handlers/: invalid.rs  login.rs  mod.rs  run_command.rs
src/logging/: logging.rs  mod.rs  stdout.rs  traits.rs  webhook.rs
