[package]
name = "rpot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.32.0", features = ["full"] }
