[package]
name = "rpot"
description = "A Minecraft RCON Honeypot"
authors = ["Paddyk45"]
license = "GPL-3"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Paddyk45/rpot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
assert_cmd = "2.0.12"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.32.0", features = ["full"] }
